Refactor booking UI, add BackHeader, improve auth store
Replaces Picker with custom dropdown and chips for facility and time selection in bookingScreen.js, adds a reusable BackHeader component, and integrates font loading in _layout.js. The auth store is refactored for better persistence and error handling. Dependencies for Expo Google Fonts and expo-font are added.

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,13 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.1",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "expo": "~53.0.17",
-    "expo-linear-gradient": "~13.0.2",
     "expo-constants": "~17.1.7",
+    "expo-font": "^14.0.9",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.3",
     "expo-status-bar": "~2.2.3",
